
2021-09-25   Ron Norman <rjn@inglenet.com>

	* atlocal.in,atlocal_win,atlocal_valgrind: Add -std=default to COBC
	         so that test cases run with 'default' config
			 This is needed in case GnuCOBOL was built with --with-std=

2021-08-29   Ron Norman <rjn@inglenet.com>

	* testsuite.src/run_file.at: Add more EXTFH test cases

2021-05-04   Ron Norman <rjn@inglenet.com>

	* testsuite.src/run_misc.at: stdarg.h is required on Centos 6 64bit

2021-05-03   Ron Norman <rjn@inglenet.com>

	* testsuite.src/run_misc.at: Change PTR value to get abort on AIX
				for dump in "Test dump feature (4)"

2021-02-08   Ron Norman <rjn@inglenet.com>

	* testsuite.src/run_file.at: Added test cases for COMMIT/ROLLBACK

2020-12-04   Ron Norman <rjn@inglenet.com>

	* testsuite.src/run_misc.at: corrected for 32/64-bit by removing pointer
				from dump in "Test dump feature (2)"

2020-11-30  James K. Lowden  <jklowden@symas.com>

	* testsuite.src/run_misc.at: correct for 32-bit in
	  "Test dump feature (2)"

2020-11-21  Simon Sobisch <simonsobisch@gnu.org>

	* valgrind.supp: suppression file for bash + bdb errors (commonly not
	  shipped with the OS)
	* atlocal_valgrind: default to suppress via valgrind.supp;
	  log name not build from parameter passed to the script any more;
	  updated usage-notes

2020-11-20  Simon Sobisch <simonsobisch@gnu.org>

	* general: pass AWK, GREP, SED to the testsuite
	* atlocal.in, atlocal_valgrind, atlocal_win:
	  remove temporary file info.out after use
	* listings-sed.sh: replace both 2 and 3-part version numbers

2020-10-26  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in, atlocal_valgrind, atlocal_win:
	  now also unsets cobc related environment variables:
	  use $() instead of backticks in all places

2020-07-19  Edward Hart <edward.dan.hart@gmail.com>

	* atlocal.in, atlocal_valgrind, atlocal_win: replaced COB_HAS_CJSON with
	  COB_HAS_JSON

2020-05-06  Simon Sobisch <simonsobisch@gnu.org>
