@@ -4,6 +4,7 @@
 	* atlocal.in,atlocal_win,atlocal_valgrind: Add -std=default to COBC
 	         so that test cases run with 'default' config
 			 This is needed in case GnuCOBOL was built with --with-std=
+	* testsuite.src/run_file.at: Added -ffile-format=gc to a few test cases
 
 2021-08-29   Ron Norman <rjn@inglenet.com>
 
